# astra

./: .dockerignore  .gitignore  .gitlab-ci.yml  AUTHORS  Astra.files  Astra.includes  AstraFull.config  AstraFull.files  AstraFull.includes  ChangeLog  Config  Dockerfile  MAKE  Makefile.am  Makefile.cvs  README  README.md  Session.vim  acinclude.m4  adm.cc  adm.h  astra.tcl  astra_callbacks.cc  astra_callbacks.h  astra_consts.cc  astra_consts.h  astra_main.cc  astra_tick_read_edi.cpp  astra_tick_read_edi.h  astra_tick_reader.h  astra_tick_view_xml.h  astra_ticket.h  astra_trunk.config  astra_trunk.files  astra_trunk.includes  astra_utils.cc  astra_utils.h  brd.cc  brd.h  buildFromScratch.sh  (+55 more)
locallibs/eticklib/: Config  Makefile.am  acinclude.m4  configure.ac  eticklib-config  eticklib.files  eticklib.includes
locallibs/libjms/: .gitignore  Config  configure.ac  gnu_config.sh  libjms-conf.in  libjms-config
locallibs/libnsi/: Config  Makefile.am  acinclude.m4  configure.ac  libnsi-config
locallibs/libtlg/: Config  Makefile.am  Tuprules.tup  acinclude.m4  configure.ac  libtlg-config
locallibs/libtypeb/: Config  Makefile.am  acinclude.m4  configure.ac  libtypeb-config  single.mk
locallibs/serverlib/: .gitignore  Config  MAKE  Makefile.am  arr.tcl  cflags  cl.pl  cl2.pl  configure.ac  dependlibs-config  dynix.mk  edit_deps  edit_deps2  gen_details.py  modules  serverlib-config  serverlib.config  serverlibconfig.in  single.mk
locallibs/shared/: AUTHORS  Config  Makefile.am  README  TODO  acinclude.m4  autogen.sh  configure.in  dependlibs-config  sharedconfig.in
src/: .ycm_extra_conf.py  AirportControl.cpp  AirportControl.h  AsyncNet.cpp  AsyncNet.hpp  BLANK_LIST.xml  BP_MODELS.xml  BT_BLANK_LIST.xml  BT_MODELS.xml  DEV_OPER_TYPES.xml  Depeches.cpp  Depeches.hpp  EdiTimeOutsDaemon.cc  ExchangeIface.cc  ExchangeIface.h  MAKE  MPSExchangeIface.cc  MPSExchangeIface.h  Makefile.am  PRN_FORMS.xml  PRN_FORM_VERS.xml  PS  PgOraConfig.cc  PgOraConfig.h  Restart  SWCExchangeIface.cc  SWCExchangeIface.h  SalonPaxList.cc  SalonPaxList.h  TypeBHelpMng.cpp  TypeBHelpMng.h  access.cc  access.h  adm.cc  adm.h  alarms.cc  alarms.h  annul_bt.cc  annul_bt.h  aodb.cc  (+500 more)
src/azimut_loyalty/: FFPServerService.vcproj  Makefile.am  adb_AvailableMilesRequest.c  adb_AvailableMilesRequest.h  adb_AvailableMilesResponse.c  adb_AvailableMilesResponse.h  adb_BonusRequest.c  adb_BonusRequest.h  adb_BonusResponse.c  adb_BonusResponse.h  adb_CancelReserveRequest.c  adb_CancelReserveRequest.h  adb_CancelReserveResponse.c  adb_CancelReserveResponse.h  adb_ClassMilesCost.c  adb_ClassMilesCost.h  adb_ClassMilesIncome.c  adb_ClassMilesIncome.h  adb_ErrorGroup.c  adb_ErrorGroup.h  adb_ErrorGroupResponse.c  adb_ErrorGroupResponse.h  adb_LoginRequest.c  adb_LoginRequest.h  adb_LoginResponse.c  adb_LoginResponse.h  adb_PayMilesRequest.c  adb_PayMilesRequest.h  adb_PayMilesResponse.c  adb_PayMilesResponse.h  adb_PriceRequest.c  adb_PriceRequest.h  adb_PriceResponse.c  adb_PriceResponse.h  adb_ReserveMilesRequest.c  adb_ReserveMilesRequest.h  adb_ReserveMilesResponse.c  adb_ReserveMilesResponse.h  adb_ReserveStatusRequest.c  adb_ReserveStatusRequest.h  (+40 more)
src/cache_tables/: roles.cc  roles.h
src/crafts/: ComponCreator.cc  ComponCreator.h  CraftCaches.cc  CraftCaches.h  Makefile.am  SeatsPax.cc  SeatsPax.h  SeatsPlanter.cc  SeatsPlanter.h
src/docs/: Makefile.am  common.cc  common.h  consts.h  docs_annul_tags.cc  docs_annul_tags.h  docs_btm.cc  docs_btm.h  docs_com.cc  docs_com.h  docs_common.cc  docs_common.h  docs_crs.cc  docs_crs.h  docs_emd.cc  docs_emd.h  docs_exam.cc  docs_exam.h  docs_komplekt.cc  docs_komplekt.h  docs_main.cc  docs_main.h  docs_main2.cc  docs_notpres.cc  docs_notpres.h  docs_pax_list.cc  docs_pax_list.h  docs_ptm.cc  docs_ptm.h  docs_ptm_btm_txt.cc  docs_ptm_btm_txt.h  docs_refuse.cc  docs_refuse.h  docs_rem.cc  docs_rem.h  docs_reseat.cc  docs_reseat.h  docs_services.cc  docs_services.h  docs_text_grid.cc  (+27 more)
src/kiosk/: Makefile.am  kiosk_alias.cpp  kiosk_cache_impl.cc  kiosk_cache_impl.h  kiosk_config.cc  kiosk_config.h  kiosk_events.cc  kiosk_events.h  test.cc  test.h
src/loading/: Makefile.am  edi_sql_insert_main.c  edi_sql_slct.c
src/stat/: Makefile.am  ad.cc  ad.h  annul_bt.cc  annul_bt.h  bi.cc  bi.h  common.cc  common.h  fv.cc  ha.cc  ha.h  main.cc  rem.cc  rem.h  reprint.cc  reprint.h  rfisc.cc  rfisc.h  services.cc  services.h  stat_ad.cc  stat_ad.h  stat_agent.cc  stat_agent.h  stat_ahm.cc  stat_annul_bt.cc  stat_annul_bt.h  stat_arx.cc  stat_bi.cc  stat_bi.h  stat_common.cc  stat_common.h  stat_departed.cc  stat_departed.h  stat_fv.cc  stat_general.cc  stat_general.h  stat_ha.cc  stat_ha.h  (+43 more)
src/tests/: Makefile.am  ts_funcs.cpp  ts_tlg.cpp
src/tlg/: AgentWaitsForRemote.cpp  AgentWaitsForRemote.h  CheckinBaseTypes.cpp  CheckinBaseTypes.h  CheckinBaseTypesOci.h  CusRequestHandler.cpp  CusRequestHandler.h  CusResponseHandler.cpp  CusResponseHandler.h  EdiHandlersFactory.cpp  EdiHandlersFactory.h  EdiSessionAstra.h  EdiSessionTimeOut.cpp  EdiSessionTimeOut.h  EdifactProfile.cc  EdifactProfile.h  EdifactRequest.cpp  EdifactRequest.h  EmdCosResponseHandler.cpp  EmdCosResponseHandler.h  EmdDispResponseHandler.cpp  EmdDispResponseHandler.h  EmdSysUpdateResponseHandler.cpp  EmdSysUpdateResponseHandler.h  EtCosRequestHandler.cpp  EtCosRequestHandler.h  EtCosResponseHandler.cpp  EtCosResponseHandler.h  EtDispResponseHandler.cpp  EtDispResponseHandler.h  EtRacResponseHandler.cpp  EtRacResponseHandler.h  IatciBprRequest.cpp  IatciBprRequest.h  IatciBprRequestHandler.cpp  IatciBprRequestHandler.h  IatciBprResponseHandler.cpp  IatciBprResponseHandler.h  IatciCkiRequest.cpp  IatciCkiRequest.h  (+133 more)
src/ts/: adm_macro.ts  apis.ts  apps_21.ts  apps_26.ts  arch.ts  astra_iatci.ts  astra_iatci_srv.ts  boarding.ts  cache_tables.ts  checkin.ts  checkin_emd.ts  comp_elem_types.ts  create_tlg.ts  crypt_sets.ts  cusres.ts  emd_cos.ts  emd_disassociate.ts  emd_disp.ts  et_cos.ts  et_disp.ts  et_emd_disp.ts  et_rac.ts  file_types.ts  fr.ts  fr_forms.ts  graph_stages.ts  html.ts  iapi_china.ts  iatci.ts  (+18 more)
(+10229 files in other folders)
