AC_INIT(configure.in)

if test "x$LIBROOT" = "x" ; then
        export LIBROOT=$HOME
fi
echo "use LIBROOT=$LIBROOT"

AC_PREFIX_DEFAULT(${HOME}/local)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(Astra2007, 0.1)

AC_LANG_C
AC_LANG_CPLUSPLUS
AC_PROG_CC
AC_PROG_CXX

#check for oracle
MRJ_CHECK_ORACLE
#check for serverlib
MRJ_CHECK_SERVERLIB
#check for eticklib
CHECK_ETICKLIB
#check for libtlg
MRJ_CHECK_LIBTLG
#check for edilib
MRJ_CHECK_EDILIB
#check for libtypeb
MRJ_CHECK_LIBTYPEB
#check for jxtlib
MRJ_CHECK_JXTLIB
#check for shared
MRJ_CHECK_SHARED
#check for libxml
AM_PATH_XML2
#check for socket type
#MRJ_CHECK_SOCKET_T
MRJ_CHECK_LIBSSIM
MRJ_CHECK_LIBCORETYPES
MRJ_CHECK_LIBNSI
MRJ_CHECK_LIBTIMATIC
AX_BOOST_BASE(1.31)
AX_BOOST_IOSTREAMS
AX_BOOST_SYSTEM
AX_BOOST_FILESYSTEM
AX_BOOST_THREAD
AX_BOOST_REGEX
AX_JMSLIB

PKG_CHECK_MODULES(PION, pion, [AC_MSG_NOTICE($PION_LIBS)], AC_MSG_ERROR([libpion not found!]))
PKG_CHECK_MODULES(LIBXML2, libxml-2.0, [AC_MSG_NOTICE($XML_LIBS)], AC_MSG_ERROR([libxml2 not found!]))

AC_ARG_ENABLE([xp-testing],
        [  --enable-xp-testing       Enable xp testing],
    [  PKG_CHECK_MODULES([CHECK], [check], [AC_MSG_NOTICE($CHECK_LIBS)], [AC_MSG_ERROR([libcheck not found])])
                [if test x$no_check != xyes; then enable_xp_testing=yes; fi]
                AM_CONDITIONAL([XP_TESTING], [test x$enable_xp_testing = xyes])
        ],\
        [AM_CONDITIONAL([XP_TESTING], [test 1 = 0])] )

if test x$enable_xp_testing = xyes; then
AC_DEFINE([XP_TESTING],,[XP TESTING support])
fi

AC_PROG_LIBTOOL
AC_PROG_RANLIB

AC_DEFUN([AX_CXX_FLAG_CHECK_IFELSE],
         [
          AC_LANG_PUSH([C++])
          CXXFLAGS_SAVE=$CXXFLAGS
          CXXFLAGS=[$1]
          AC_COMPILE_IFELSE([AC_LANG_PROGRAM([],[])], [$2],[$3])
          CXXFLAGS=$CXXFLAGS_SAVE
          AC_LANG_POP([C++])
          ])

# Функция ниже проверяет, поддерживается ли флаг заданный в FORMAT_SECURITY
# текущей версией компилятора.
# Если нет, то переменная FORMAT_SECURITY обнуляется
FORMAT_SECURITY="-Wno-error=format-security"
AX_CXX_FLAG_CHECK_IFELSE(["$FORMAT_SECURITY"],
                         [],
                         [FORMAT_SECURITY=""])


CFLAGS="-Wall -g -O0 $TCH_ETC_FLAGS $ORACLE_CXXFLAGS $EDILIB_CXXFLAGS $JXTLIB_CXXFLAGS $SERVERLIB_CXXFLAGS \
 $ETICKLIB_CXXFLAGS $LIBTYPEB_CXXFLAGS $SHARED_CFLAGS $LIBTLG_CXXFLAGS $TCLMON_CXXFLAGS $LIBXML2_CFLAGS $JMSLIB_CPPFLAGS $CHECK_CFLAGS\
 $LIBSSIM_CXXFLAGS $LIBCORETYPES_CXXFLAGS $LIBNSI_CXXFLAGS $LIBTIMATIC_CXXFLAGS \
 $FORMAT_SECURITY -I\$(top_builddir)/src -D ASTRA2007"
CXXFLAGS="$CFLAGS $BOOST_CPPFLAGS $PION_CFLAGS $XML_CFLAGS"
AC_OUTPUT(Makefile src/Makefile src/tlg/Makefile src/tests/Makefile src/docs/Makefile src/stat/Makefile src/kiosk/Makefile src/crafts/Makefile)

ln -s $LIBROOT/tscriptc/tscriptc ${srcdir}/src/tscriptc

echo "================================="
echo "Done. Run make"
echo "================================="
